fix css height adaption on mobile view

--- a/css/style.css
+++ b/css/style.css
@@ -25,13 +25,9 @@ body {
 }
 
 .content .panel {
-	height: 100%;
 	margin: 0 auto;
 	margin-bottom: 20px;
 	max-width: 600px;
-	/*background-image: linear-gradient(to bottom, #fff, #eceae3);
-	box-shadow: inset 0 1px 0 rgba(255,255,255,.15),0 1px 5px rgba(0,0,0,.075);*/
-	
 }
 
 .panel .input-group {
@@ -122,11 +118,11 @@ body, .navbar {
 
 
 @media(max-width: 768px) {
-	
+
 	.cover h1 {
 		font-size: 28px;
 	}
-	
+
 	.input-group-lg > .form-control, .input-group-lg > .addon,
 	.input-group-lg > .input-group-btn >.btn {
 		height: 36px;
@@ -135,7 +131,7 @@ body, .navbar {
 		line-height: 1.3333333;
 		border-radius: 3px;
 	}
-	
+
 	.cover #search-condition > label {
 		font-size: 13px;
 	}
@@ -146,4 +142,8 @@ body, .navbar {
 	.cover {
 		height: 94%;
 	}
+
+    .content .container {
+        min-height: 94%;
+    }
 }
